# barnsley-location-data-review

./: Barnsley Location Data Review.ipynb  LICENSE  Poetry-and-Python-Setup.txt  README.md  pyproject.toml
data/: E08000016_003.csv  E08000016_005.csv  E08000016_007.csv  E08000016_009.csv  E08000016_011.csv  E08000016_013.csv  E08000016_019.csv
