[tool.poetry]
name = "location-data-review"
version = "0.1.0"
description = "Review of commercial location data produced by the Valuations Office Agency and Barnsley Metropoliton Borough Council to assess concerns in data quality."
authors = ["Gavin Chait <gchait@whythawk.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.4"
jupyterlab = "^3.0.14"
numpy = "^1.20.2"
pandas = "^1.2.4"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
nbconvert = "^6.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
